speaker notes sw factory

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
       "MD041": false
    },
    "cSpell.words": [
-      "Bremsensteuergeräte"
+      "Bremsensteuergeräte",
+      "Buildsystem"
    ],
 }
